--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,10 @@ dependencies {
     implementation 'com.codepath.libraries:asynchttpclient:2.1.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'org.parceler:parceler-api:1.1.12'
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
+    annotationProcessor 'org.parceler:parceler:1.1.12'
     // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     testImplementation 'junit:junit:4.+'
